0.Assignments/2.Interfacing/6.Keypad and LCD/Keypad_LCD_Eclipse_Exercises/.metadata/.plugins/org.eclipse.cdt.ui/sdf.build.log
16:03:19 **** Incremental Build of configuration Debug for project sdf ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\sdf.o" "..\\src\\sdf.c" 
..\src\sdf.c: In function 'main':
..\src\sdf.c:18:2: error: invalid preprocessing directive #elseif
 #elseif(Data ==6)
  ^

16:03:20 Build Finished (took 727ms)

